--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,12 @@ dependencies:
   flutter_screenutil: ^5.9.0
   firebase_auth: ^4.16.0
   carousel_slider: ^4.2.1
+  shared_preferences: ^2.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  dio: ^5.4.1
+  dotenv: ^4.2.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -27,3 +33,4 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - .env
